TS-4916 Fix for a H2-infinite-loop deadlock.